# almost-electron

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
js-interface/: fw_interface.js
js-src/: binding.gyp  index.js
src/: CMakeLists.txt  node_plugin.cpp
src/framework/: CMakeLists.txt  almost_electron.cpp  almost_electron.h
